[package]
name = "get-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dirs = "4.0"
path-absolutize = "3.0.11"
chrono = "0.4"
regex = "1.5"
